--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,23 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+	set('vaadinVersion', '13.0.4')
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'com.vaadin:vaadin-spring-boot-starter'
+	implementation 'org.togglz:togglz-spring-boot-starter:2.6.1.Final'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "com.vaadin:vaadin-bom:${vaadinVersion}"
+	}
+}
+
+wrapper {
+	distributionType = Wrapper.DistributionType.ALL
 }
