--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,3 @@
 steps:
-  - name: 'gcr.io/cloud-builders/gradle'
-    args: ['jib']
+  - name: 'gcr.io/lims-tools-prod/openjdk:10.0.2-13-jdk-slim'
+    args: ['./gradlew', 'jib']
