--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,3 @@
 steps:
-  - name: 'gcr.io/lims-tools-prod/openjdk:10.0.2-13-jdk-slim'
+  - name: 'gcr.io/gdos-mdonahue-sb/java/javac:11'
     args: ['./gradlew', 'jib']
