--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,3 @@
 steps:
-  - name: 'gcr.io/gdos-mdonahue-sb/java/javac:11'
+  - name: 'gcr.io/gdos-mdonahue-sb/java/gradle'
     args: ['./gradlew', 'jib']
