--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,3 @@
 steps:
-  - name: 'gcr.io/gdos-mdonahue-sb/java/gradle'
+  - name: 'gcr.io/gdos-mdonahue-sb/java/gradle:5.4.1-jdk-11'
     args: ['jib']
