--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,5 @@
-togglz:
-  features:
-    BUTTONTEXT:
-      enabled: true
-      strategy: spring-profile
-      param:
-        profiles: german, japanese
-
-      # You need to have a user when calculating percentages for some reason...
-#      strategy: gradual
-#      param:
-#        percentage: 50
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
